[package]
name = "cauchy"
version = "0.2.2"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description = "Trait for real and complex numbers"
documentation = "https://docs.rs/cauchy"
repository = "https://github.com/termoshtt/cauchy"
keywords = []
categories = ["algorithms"]
license = "MIT"

[lib]
path = "../src/lib.rs"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

[dependencies]
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
num-traits = { git = "https://github.com/mesalock-linux/num-traits-sgx" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx" }
rand = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.2" }
num-complex = { git = "https://github.com/mesalock-linux/num-complex-sgx", features = ["serde", "rand"] }
